--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
         <main class="slds-col">
 
             <div class="slds-form-element" id="form_element__campaign">
-                <label class="slds-form-element__label" for="form-element-01">Campaign Name</label>
+                <label class="slds-form-element__label" for="form-element-01">Communication Cell Code</label>
                 <div style="position:relative">
                     <a href="javascript:void(0)" aria-describedby="help" id="campaign__help__button">Help Text</a>
                     <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left slds-slide-from-top-to-bottom" role="tooltip" id="campaign__help__block" style="position:absolute;top:-20px;left:35px">
@@ -104,7 +104,7 @@
         <main class="slds-col">
 
             <div class="slds-form-element slds-form-element_readonly">
-                <span class="slds-form-element__label">Campaign</span>
+                <span class="slds-form-element__label">Communication Cell Code</span>
                 <div class="slds-form-element__control">
                     <div class="slds-form-element__static" id="campaignSummary"></div>
                 </div>
@@ -141,7 +141,7 @@
                     </span>
                 </div>
                 <div class="slds-media__body">
-                    <p>Your unique Promotion Association Key is: <span id="keySummary"></span>. Copy this key and use it in the Update Contact widget.</p>
+                    <p>Your unique Promotion Association Key is: <b><red><span id="keySummary"></span></red></b>. Copy this key and use it in the Update Contact widget.</p>
                 </div>
             </div>
 
