--- a/public/index.html
+++ b/public/index.html
@@ -56,9 +56,10 @@
                 <div class="slds-form-element__control">
                     <select id="channel" name="channel">
                         <option value="notselected" selected>Please select a channel</option>
-                        <option value="edm">EDM</option>
-                        <!--<option value="dm">DM</option>-->
-                        <!--<option value="push">PUSH</option>-->
+                        <option value="Email">Email</option>
+                        <option value="EPOS">EPOS</option>
+                        <option value="Whitemail">Whitemail</option>
+                        <option value="Mobilize">Mobilize</option>
                     </select>
                 </div>
                 <div class="slds-form-element__help" id="form-error__channel">This field is required</div>
