--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,8 @@
         <div class="slds-grid">
             <div class="slds-col" id="column1">
                 <h2>Promotion Type</h2>
-                <button id="toggleLastStep">Toggle Last Step</button>
+                <button id="toggleStep2">Toggle Step 2</button>
+                <button id="toogleStep3">Toggle Step 3</button>
                 <fieldset class="slds-form-element slds-form-element_stacked">
                     <legend class="slds-form-element__legend slds-form-element__label">Select the type of promotion</legend>
                     <div class="slds-form-element__control">
