--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,12 @@
         <div class="slds-grid">
             <div class="slds-col" id="column1">
                 <h2>Promotion Type</h2>
-                <button id="toggleStep1">Toggle Step 1</button>
-                <button id="toogleStep2">Toggle Step 2</button>
+                <div>
+                    <button id="toggleStepOne">Toggle Step 1</button>
+                </div>
+                <div>
+                    <button id="toogleStepTwo">Toggle Step 2</button>
+                </div>
                 <fieldset class="slds-form-element slds-form-element_stacked">
                     <legend class="slds-form-element__legend slds-form-element__label">Select the type of promotion</legend>
                     <div class="slds-form-element__control">
