--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
                             </label>
                         </span>
                         <span class="slds-radio">
-                            <input type="radio" class="promotion_type" id="radio-3" value="online-instore" name="promotionType" />
+                            <input type="radio" class="promotion_type" id="radio-3" value="online_instore" name="promotionType" />
                             <label class="slds-radio__label" for="radio-3">
                                 <span class="slds-radio_faux"></span>
                                 <span class="slds-form-element__label">Online and In-store Code</span>
