--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <div id="step0" class="step">
-        <div class="slds-grid">
+        <div class="slds-grid slds-gutters">
             <div class="slds-col">
                 <h2>Promotion Type</h2>
                 <button id="toggle_step1">Toggle Step 1</button>
@@ -87,7 +87,7 @@
     </div>
 
     <div id="step1" class="step">
-        <div class="slds-grid">
+        <div class="slds-grid slds-gutters">
             <div class="slds-col">
 
                 <h2>Online Code Setup</h2>
@@ -248,7 +248,7 @@
     </div>
 
     <div id="step2" class="step">
-        <div class="slds-grid">
+        <div class="slds-grid slds-gutters">
             <div class="slds-col">
 
                 <h2>In-store Code Setup</h2>
@@ -390,7 +390,7 @@
     </div>
 
     <div id="step3" class="step">
-        <div class="slds-grid">
+        <div class="slds-grid slds-gutters">
             <div class="slds-col">
 
                 <div class="slds-form-element slds-form-element_readonly">
