--- a/public/index.html
+++ b/public/index.html
@@ -379,33 +379,40 @@
             <div class="slds-col">
 
                 <div class="slds-form-element slds-form-element_readonly">
-                    <span class="slds-form-element__label">Communication Cell Code</span>
+                    <span class="slds-form-element__label">Promotion Type</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="campaignSummary"></div>
+                        <div class="slds-form-element__static" id="promotion_type"></div>
                     </div>
                 </div>
 
                 <div class="slds-form-element slds-form-element_readonly">
-                    <span class="slds-form-element__label">Channel</span>
+                    <span class="slds-form-element__label">Target Data Extension</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="channelSummary"></div>
+                        <div class="slds-form-element__static" id="target_data_extension"></div>
                     </div>
                 </div>
+            </div>
 
+            <div class="slds-col">
                 <div class="slds-form-element slds-form-element_readonly">
-                    <span class="slds-form-element__label">Activity</span>
+                    <span class="slds-form-element__label">Online Communication Cell Code</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="activitySummary"></div>
+                        <div class="slds-form-element__static" id="communication_cell_code"></div>
                     </div>
                 </div>
+            </div>
 
+             <div class="slds-col">
                 <div class="slds-form-element slds-form-element_readonly">
-                    <span class="slds-form-element__label">Promotion Code</span>
+                    <span class="slds-form-element__label">Online Communication Cell Code</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="promotionSummary"></div>
+                        <div class="slds-form-element__static" id="communication_cell_code"></div>
                     </div>
                 </div>
-                <br />
+            </div>
+        </div>
+        <div class="slds-grid slds-gutters">
+            <div class="slds-col">         
                 <div class="slds-scoped-notification slds-media slds-media_center slds-scoped-notification_light" role="status">
                     <div class="slds-media__figure">
                         <span class="slds-icon_container slds-icon-utility-info" title="information">
@@ -416,10 +423,9 @@
                         </span>
                     </div>
                     <div class="slds-media__body">
-                        <p>Your unique Promotion Association Key is: <b><red><span id="keySummary"></span></red></b>. Copy this key and use it in the Update Contact widget.</p>
+                        <p>Your unique Promotion Association Key is: <b><span id="keySummary"></span></b>. Copy this key and use it in the Update Contact widget.</p>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
