--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 <body>
     <div id="step0" class="step">
         <div class="slds-grid slds-gutters">
-            <div class="slds-col">
+            <div class="slds-col slds-size_1-of-2">
                 <h2>Promotion Type</h2>
                 <button id="toggle_step1">Toggle Step 1</button>
                 <button id="toggle_step2">Toggle Step 2</button>
@@ -82,7 +82,7 @@
 
     <div id="step1" class="step">
         <div class="slds-grid slds-gutters">
-            <div class="slds-col">
+            <div class="slds-col slds-size_1-of-2">
 
                 <h2>Online Code Setup</h2>
 
@@ -238,7 +238,7 @@
 
     <div id="step2" class="step">
         <div class="slds-grid slds-gutters">
-            <div class="slds-col">
+            <div class="slds-col slds-size_1-of-2">
 
                 <h2>In-store Code Setup</h2>
 
@@ -376,7 +376,7 @@
 
     <div id="step3" class="step">
         <div class="slds-grid slds-gutters">
-            <div class="slds-col">
+            <div class="slds-col slds-size_1-of-2">
 
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Promotion Type</span>
