--- a/public/index.html
+++ b/public/index.html
@@ -397,16 +397,82 @@
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Online Communication Cell Code</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="communication_cell_code"></div>
+                        <div class="slds-form-element__static" id="communication_cell_code_online"></div>
+                    </div>
+                </div>
+                <div class="slds-form-element slds-form-element_readonly">
+                    <span class="slds-form-element__label">Offer Type</span>
+                    <div class="slds-form-element__control">
+                        <div class="slds-form-element__static" id="offer_type"></div>
+                    </div>
+                </div>
+                <div class="slds-form-element slds-form-element_readonly">
+                    <span class="slds-form-element__label">Print at Till Online</span>
+                    <div class="slds-form-element__control">
+                        <div class="slds-form-element__static" id="print_at_till_online"></div>
+                    </div>
+                </div>
+                <div class="slds-form-element slds-form-element_readonly">
+                    <span class="slds-form-element__label">Instant Win Online</span>
+                    <div class="slds-form-element__control">
+                        <div class="slds-form-element__static" id="instant_win_online"></div>
+                    </div>
+                </div>
+                <div class="slds-form-element slds-form-element_readonly">
+                    <span class="slds-form-element__label">Medium Online</span>
+                    <div class="slds-form-element__control">
+                        <div class="slds-form-element__static" id="instant_win_online"></div>
+                    </div>
+                </div>
+                <div class="slds-form-element slds-form-element_readonly">
+                    <span class="slds-form-element__label">Promotion ID Online</span>
+                    <div class="slds-form-element__control">
+                        <div class="slds-form-element__static" id="promotion_id_online"></div>
+                    </div>
+                </div>
+                <div class="slds-form-element slds-form-element_readonly">
+                    <span class="slds-form-element__label">Promotion ID Group Online</span>
+                    <div class="slds-form-element__control">
+                        <div class="slds-form-element__static" id="promotion_group_id_online"></div>
                     </div>
                 </div>
             </div>
 
              <div class="slds-col slds-size_1-of-3">
                 <div class="slds-form-element slds-form-element_readonly">
-                    <span class="slds-form-element__label">Online Communication Cell Code</span>
+                    <span class="slds-form-element__label">Communication Cell Code Instore</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="communication_cell_code"></div>
+                        <div class="slds-form-element__static" id="communication_cell_code_instore"></div>
+                    </div>
+                </div>
+                <div class="slds-form-element slds-form-element_readonly">
+                    <span class="slds-form-element__label">Print at Till Instore</span>
+                    <div class="slds-form-element__control">
+                        <div class="slds-form-element__static" id="print_at_till_instore"></div>
+                    </div>
+                </div>
+                <div class="slds-form-element slds-form-element_readonly">
+                    <span class="slds-form-element__label">Instant Win Instore</span>
+                    <div class="slds-form-element__control">
+                        <div class="slds-form-element__static" id="instant_win_instore"></div>
+                    </div>
+                </div>
+                <div class="slds-form-element slds-form-element_readonly">
+                    <span class="slds-form-element__label">Medium Instore</span>
+                    <div class="slds-form-element__control">
+                        <div class="slds-form-element__static" id="instant_win_instore"></div>
+                    </div>
+                </div>
+                <div class="slds-form-element slds-form-element_readonly">
+                    <span class="slds-form-element__label">Instore Code</span>
+                    <div class="slds-form-element__control">
+                        <div class="slds-form-element__static" id="instore_code"></div>
+                    </div>
+                </div>
+                <div class="slds-form-element slds-form-element_readonly">
+                    <span class="slds-form-element__label">Promotion ID Group Instore</span>
+                    <div class="slds-form-element__control">
+                        <div class="slds-form-element__static" id="promotion_group_id_instore"></div>
                     </div>
                 </div>
             </div>
