so many updates

--- a/public/index.html
+++ b/public/index.html
@@ -87,6 +87,24 @@
                 <h2>Online Code Setup</h2>
 
                 <div class="slds-form-element">
+                    <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">MC Unique Promotion ID</label>
+                    <div class="slds-form-element__icon">
+                        <button class="slds-button slds-button_icon" id="mc_unique_promotion_id_online__help_button" aria-describedby="help">
+                            <svg class="slds-button__icon" aria-hidden="true">
+                                <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#info"></use>
+                            </svg>
+                            <span class="slds-assistive-text">Help</span>
+                        </button>
+                        <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="mc_unique_promotion_id_online__help" style="position:absolute;top:-34px;left:-16px;width:168px">
+                            <div class="slds-popover__body">Enter a unique code for the MC Promotion ID.</div>
+                        </div>
+                    </div>
+                    <div class="slds-form-element__control">
+                        <input type="text" id="mc_unique_promotion_id_online" placeholder="Communication Cell Code" class="slds-input" />
+                    </div>
+                </div>
+
+                <div class="slds-form-element">
                     <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Communication Cell Code</label>
                     <div class="slds-form-element__icon">
                         <button class="slds-button slds-button_icon" id="communication_cell_code_online__help_button" aria-describedby="help">
@@ -100,7 +118,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="communication_cell_code" placeholder="Communication Cell Code" class="slds-input" />
+                        <input type="text" id="communication_cell_code_online" placeholder="Communication Cell Code" class="slds-input" />
                     </div>
                 </div>
 
@@ -241,6 +259,24 @@
             <div class="slds-col slds-size_1-of-2">
 
                 <h2>In-store Code Setup</h2>
+
+                <div class="slds-form-element">
+                    <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">MC Unique Promotion ID</label>
+                    <div class="slds-form-element__icon">
+                        <button class="slds-button slds-button_icon" id="mc_unique_promotion_id_instore__help_button" aria-describedby="help">
+                            <svg class="slds-button__icon" aria-hidden="true">
+                                <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#info"></use>
+                            </svg>
+                            <span class="slds-assistive-text">Help</span>
+                        </button>
+                        <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="mc_unique_promotion_id_instore__help" style="position:absolute;top:-34px;left:-16px;width:168px">
+                            <div class="slds-popover__body">Enter a unique code for the MC Promotion ID.</div>
+                        </div>
+                    </div>
+                    <div class="slds-form-element__control">
+                        <input type="text" id="mc_unique_promotion_id_instore" placeholder="Communication Cell Code" class="slds-input" />
+                    </div>
+                </div>
 
                 <div class="slds-form-element">
                     <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Communication Cell Code</label>
@@ -395,45 +431,51 @@
 
             <div class="slds-col slds-size_1-of-3">
                 <div class="slds-form-element slds-form-element_readonly">
+                    <span class="slds-form-element__label">MC Unique Promotion ID</span>
+                    <div class="slds-form-element__control">
+                        <div class="slds-form-element__static" id="mc_unique_promotion_id_online_summary"></div>
+                    </div>
+                </div>
+                <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Online Communication Cell Code</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="communication_cell_code_online"></div>
+                        <div class="slds-form-element__static" id="communication_cell_code_online_summary"></div>
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Offer Type</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="offer_type"></div>
+                        <div class="slds-form-element__static" id="offer_type_summary"></div>
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Print at Till Online</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="print_at_till_online"></div>
+                        <div class="slds-form-element__static" id="print_at_till_online_summary"></div>
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Instant Win Online</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="instant_win_online"></div>
+                        <div class="slds-form-element__static" id="instant_win_online_summary"></div>
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Medium Online</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="instant_win_online"></div>
+                        <div class="slds-form-element__static" id="medium_online_summary"></div>
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Promotion ID Online</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="promotion_id_online"></div>
+                        <div class="slds-form-element__static" id="promotion_id_online_summary"></div>
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Promotion ID Group Online</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="promotion_group_id_online"></div>
+                        <div class="slds-form-element__static" id="promotion_group_id_online_summary"></div>
                     </div>
                 </div>
             </div>
@@ -442,37 +484,37 @@
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Communication Cell Code Instore</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="communication_cell_code_instore"></div>
+                        <div class="slds-form-element__static" id="communication_cell_code_instore_summary"></div>
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Print at Till Instore</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="print_at_till_instore"></div>
+                        <div class="slds-form-element__static" id="print_at_till_instore_summary"></div>
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Instant Win Instore</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="instant_win_instore"></div>
+                        <div class="slds-form-element__static" id="instant_win_instore_summary"></div>
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Medium Instore</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="instant_win_instore"></div>
+                        <div class="slds-form-element__static" id="instant_win_instore_summary"></div>
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Instore Code</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="instore_code"></div>
+                        <div class="slds-form-element__static" id="instore_code_summary"></div>
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Promotion ID Group Instore</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="promotion_group_id_instore"></div>
+                        <div class="slds-form-element__static" id="promotion_group_id_instore_summary"></div>
                     </div>
                 </div>
             </div>
